accessible/tests/browser/hittest/browser_test_text.js
@@ -9,6 +9,10 @@ addAccessibleTask(
 a
 <div id="noChars" style="width: 5px; height: 5px;"><p></p></div>
 <p id="twoText"><span>a</span><span>b</span></p>
+<div id="iframeAtEnd" style="width: 20px; height: 20px;">
+  a
+  <iframe width="1" height="1"></iframe>
+</div>
   `,
   async function(browser, docAcc) {
     const dpr = await getContentDPR(browser);
@@ -28,6 +32,17 @@ a
     const text2 = twoText.getChildAt(1);
     [x, y] = Layout.getBounds(text2, dpr);
     await testOffsetAtPoint(twoText, x, y, COORDTYPE_SCREEN_RELATIVE, 1);
+
+    // Test offsetAtPoint when there is an iframe at the end of the container.
+    const iframeAtEnd = findAccessibleChildByID(docAcc, "iframeAtEnd", [
+      Ci.nsIAccessibleText,
+    ]);
+    let width;
+    let height;
+    [x, y, width, height] = Layout.getBounds(iframeAtEnd, dpr);
+    x += width - 1;
+    y += height - 1;
+    await testOffsetAtPoint(iframeAtEnd, x, y, COORDTYPE_SCREEN_RELATIVE, -1);
   },
   {
     topLevel: true,
